fixing up excessive margins

--- a/app/guitars/partials/advancedSearch.html
+++ b/app/guitars/partials/advancedSearch.html
@@ -159,7 +159,7 @@
         </div>
     </div>
 
-    <div class="advancedSearchResultsDisplayWrapper">
+    <div ng-if="showResultsTitle" class="advancedSearchResultsDisplayWrapper">
 
         <div class="advancedSearchResultsDisplay">
 
