more icons and styling

--- a/app/guitars/partials/advancedSearch.html
+++ b/app/guitars/partials/advancedSearch.html
@@ -6,12 +6,12 @@
 
             <div class="searchHeaderWrapper">
                 <div class="advSearchTitleWrapper">
-                    <h3 class="advSearchTitleClass">Advanced Search</h3>
+                    <h3 class="advSearchTitleClass">Advanced Search <i class="fas fa-sliders-h"></i></h3>
                     <h2 class="advSearchInstructions">fill out the fields below to obtain detailed information about a guitar</h2>
                 </div>
                 <div class="basicSearchLinkWrapper">
                     <h4 class="basicSearchLinkTitle">If your not getting the results you want, head back to the basic search</h4>
-                    <button class="basicSearchLinkButton" ng-click="toBasicSearch()">Basic Search</button>
+                    <button class="basicSearchLinkButton" ng-click="toBasicSearch()">Basic Search <i class="fas fa-search"></i></button>
                 </div>
             </div>
 
