--- a/app/guitars/partials/welcomePage.html
+++ b/app/guitars/partials/welcomePage.html
@@ -4,14 +4,12 @@
 
     <div class="advancedSearchLinkWrapper">
         <h4 class="advSearchInstructionsClass">If you would like more refined search results, try our advanced search</h4>
-        <button class="toAdvancedSearchButton" ng-click="toAdvancedSearch()">Advanced Search</button>
+        <button class="toAdvancedSearchButton" ng-click="toAdvancedSearch()">Advanced Search <i class="fas fa-search-plus"></i></button>
     </div>
 
     <div class="searchDivWrapper">
         <div class="basicSearchTitleWrapper">
-            <h3 class="basicSearchTitle">
-                Basic Search
-            </h3>
+            <h3 class="basicSearchTitle">Basic Search <i class="fas fa-music"></i></h3>
             <h2 class="basicSearchInstructions">
                 Enter something simple like "fender stratocaster" or something more specific like "black USA fender standard stratocaster"
             </h2>
