--- a/app/nav/partials/navigation.html
+++ b/app/nav/partials/navigation.html
@@ -1,7 +1,10 @@
 <div class = "navGrid" ng-controller="NavCtrl">
     <div class="navLeft">
         <div class="logoWrapper">
-            <h3>Guitar Pricer</h3>
+            <img class="logoImg" src="../images/guitaricon.png">
+            <h3 class="logoTitle">Guitar Pricer</h3>
+            <p class="poweredByLogo">powered by</p>
+            <img class="ebayLogo" src="../images/ebayIcon.png">
         </div>
     </div>
 
