--- a/app/userGear/partials/userNav.html
+++ b/app/userGear/partials/userNav.html
@@ -4,7 +4,7 @@
 
         <div class="userNavButtonsRow" ng-if="isAuthenticated()">
             <div class="searchForPricesButtonWrapper">
-                <button class="searchForPricesButton" ng-click="toSearches()">Search For Prices</button>
+                <button class="searchForPricesButton" ng-click="toSearches()">Search For Prices <i class="fas fa-search"></i> </button>
             </div>
             <div class="showYourGuitarsButtonWrapper">  
                 <button class="showYourGuitarsButton" ng-click="toDisplayUserGuitars()">Show Your Guitars</button>
@@ -12,10 +12,6 @@
             <div class="enterNewGuitarButtonWrapper">
                 <button class="enterNewGuitarButton" ng-click="toGuitarIntakeForm()">Enter New Guitar</button>
             </div>
-
         </div>
-
-
     </div>
-
 </div>
