--- a/css/navBar.css
+++ b/css/navBar.css
@@ -3,10 +3,10 @@
     max-height: 4em;    
     background-color: #FFF;
     margin-top: -1em;
-    padding-bottom: .3em;
+    padding-bottom: 2.5em;
     border-bottom: .3em solid rgba(216, 216, 216, 0.959);
     grid-area: nav;
-    grid-template-columns: 1fr 4fr 2fr;
+    grid-template-columns: 3fr 4fr 2fr;
     grid-template-areas: 
     "navBarLeft . navBarRight"
     ;
@@ -15,6 +15,7 @@
 .navLeft {
     display: grid;
     grid-area: navBarLeft;
+    grid-template-columns: 1fr;
     grid-template-areas: 
     "logo"
     ;
@@ -30,13 +31,58 @@
 }
 
 .logoWrapper {
+    display: grid;
+    max-width: 14em;
     grid-area: logo;
+    grid-template-columns: 2fr 1fr;
+    grid-auto-rows:  90% 10%;
+    grid-template-areas: 
+    "logoImage logoText"
+    ". ebayLogo"
+    ;
+}
+
+.logoTitle {
+    grid-area: logoText;
     white-space: nowrap;
+    margin-left: 2.5em;
+    -webkit-transform:scale(2,1.3); /* Safari and Chrome */
+    -moz-transform:scale(2,1.3); /* Firefox */
+    -ms-transform:scale(2,1.3); /* IE 9 */
+    -o-transform:scale(2,1.3); /* Opera */
+    transform:scale(2,1.3); /* W3C */
     align-self: center;
     justify-self: center;
-    font-size: 1.4em; 
+    font-size: 1.9em; 
     font-weight: 900;
     color: rgba(155, 155, 155, 0.952);
+}
+
+.logoImg {
+    grid-area: logoImage;
+    align-self: center;
+    justify-self: center;
+    margin-top: .6em;
+    height: 5.3em;
+    width: 6em;
+}
+
+.ebayLogo {
+    grid-area: ebayLogo;
+    align-self: end;
+    justify-self: end;
+    margin-top: -2.7em;
+    margin-right: 2em;
+    height: 4em;
+    width: 4em;
+}
+
+.poweredByLogo {
+    grid-area:  ebayLogo;
+    align-self:  start;
+    justify-self: start;
+    margin-top: -1.3em;
+    margin-left: 4em;
 }
 
 .currentUserWrapper {
@@ -114,4 +160,6 @@
     line-height: .8em;
     width: 6em;
 }
+
+
 
