--- a/app/userGear/partials/guitarIntakeForm.html
+++ b/app/userGear/partials/guitarIntakeForm.html
@@ -4,78 +4,140 @@
 <div class="guitarIntakeWrapper">
 
     <div class="guitarIntakeTitleWrapper">
-        <div class="guitarIntakeTitle">
-            <h2>Enter In Information About Your Guitar Below To Track Its value</h2>
+        <div class="guitarIntakeTitleDiv">
+            <h2 class="guitarIntakeTitle">Guitar Entry</h2>
+            <p class="guitarIntakeSubTitle">Enter the requested information about your guitar to begin tracking its value</p>
         </div>
     </div>
 
     <div class="guitarIntakeFormWrapper">
         <div class="guitarIntakeFormWrapperTwo">
             <div class="guitarIntakeFormRowOne">
-                    <div class="intakeBrandInputWrapper">
-                        <h5>Guitar Brand</h5>
-                        <input type="text" ng-model="guitarBrandInput">
+                    <div class="intakeBrandWrapper">
+                        <p class="intakeBrandTitle">Guitar Brand</p>
+                        <p class="intakeBrandSubTitle">*required</p>
+                        <input class="intakeBrandInput" type="text" ng-model="intakeBrandInput">
                     </div>
-                    <div class="intakeModelInputWrapper">
-                        <h5>Guitar model</h5>
-                        <input type="text" ng-model="guitarModelInput">
+
+                    <div class="intakeModelWrapper">
+                        <p class="intakeModelTitle">Guitar model</p>
+                        <p class="intakeModelSubTitle">*required</p>
+                        <input class="intakeModelInput" type="text" ng-model="intakeModelInput">
                     </div>
-                    <div>
-                        <h5>Country of Origin</h5>
-                        <input type="text" ng-model="guitarCountryInput">
-                    </div>
-                    <div class="intakeYearInputWrapper">
-                        <h5>Year of Production</h5>
-                        <input type="text" ng-model="yearInput">
-                    </div>
-                    <div class="intakeGuitarOrBassWrapper">
-                        <h5>Guitar or Bass?</h5>
-                        <label class="intakeGuitarButton">
-                            Guitar
-                            <input ng-model="guitarBass" value="guitar" type="radio" name="guitarOrBass">
-                        </label>
-                        <label class="intakeBassButton">
-                            Bass
-                            <input ng-model="guitarBass" value="bass" type="radio" name="guitarOrBass">
-                        <label>
+
+                    <div class="intakeYearWrapper">
+                        <p class="intakeYearTitle">Year of Production</p>
+                        <p class="intakeYearSubTitle">(if unknown leave blank)</p>
+                        <input class="intakeYearInput" type="text" ng-model="intakeYearInput">
                     </div>
                 </div>
                 <div class="guitarIntakeFormRowTwo">
-                    <div class="intakeConditionInputWrapper">
-                        <h5>Select Instrument Condition</h5>
-                        <select ng-options="value for value in conditionValues" ng-model="selectedCondition">
+
+                    <div class="intakeConditionWrapper">
+                        <p class="intakeConditionTitle">Instrument Condition</p>
+                        <p class="intakeConditionSubTitle">*required</p>
+                        <select class="intakeConditionInput" ng-options="value for value in conditionValues" ng-model="selectedCondition">
                             <option value="">select condition</option>
                         </select>
                     </div>
-                    <div class="intakeFinishInputWrapper">
-                        <h5>Color and/or Finish</h5>
-                        <input type="text" ng-model="finishInput">
+
+                    <div class="guitarOrBassWrapper">
+                        <p class="guitarOrBassTitle">Guitar or Bass?</p>
+                        <p class="guitarOrBassSubTitle">*required</p>
+                        <div class="guitarOrBassInput">
+                            <label class="guitarRadio">
+                                Guitar
+                                <span ng-show="guitarBass === 'guitar'">
+                                    <i class="far fa-circle fa-sm honk"></i>
+                                </span>
+                                <span ng-show="guitarBass !== 'guitar'">
+                                    <i class="far fa-circle fa-sm"></i>
+                                </span>
+                                <input class="guitarRadioButton" ng-model="guitarBass" value="guitar" type="radio" name="guitarOrBass">
+                            </label>
+                            <label class="bassRadio">
+                                Bass
+                                <span ng-show="guitarBass === 'bass'">
+                                    <i class="far fa-circle fa-sm honk"></i>
+                                </span>
+                                <span ng-show="guitarBass !== 'bass'">
+                                    <i class="far fa-circle fa-sm"></i>
+                                </span>
+                                <input ng-model="guitarBass" value="bass" type="radio" name="guitarOrBass">
+                            </label>
+                        </div>
                     </div>
-                    <div class="intakeElectricAcousticWrapper">
-                        <h5>Electric or Acoustic?</h5>
-                        <label class="electricButton">
-                            Electric
-                            <input ng-model="electricAcoustic" value="electric" type="radio" name="guitarType">
-                        </label>
-                        <label class="intakeAcousticButton">
-                            Acoustic
-                            <input ng-model="electricAcoustic" value="acoustic" type="radio" name="guitarType">
-                        <label>
+
+                    <div class="electricAcousticWrapper">
+                        <p class="electricAcousticTitle">Electric or Acoustic?</p>
+                        <p class="electricAcousticSubTitle">(check acoustic for acoustics w/ pickups)</p>
+                        <div class="electricAcousticInput">
+                            <label class="electricButton">
+                                Electric
+                                <span ng-show="electricAcoustic === 'electric'">
+                                    <i class="far fa-circle fa-sm honk"></i>
+                                </span>
+                                <span ng-show="electricAcoustic !== 'electric'">
+                                    <i class="far fa-circle fa-sm"></i>
+                                </span>
+                                <input ng-model="electricAcoustic" value="electric" type="radio" name="guitarType">
+                            </label>
+                            <label class="acousticButton">
+                                Acoustic
+                                <span ng-show="electricAcoustic === 'acoustic'">
+                                    <i class="far fa-circle fa-sm honk"></i>
+                                </span>
+                                <span ng-show="electricAcoustic !== 'acoustic'">
+                                    <i class="far fa-circle fa-sm"></i>
+                                </span>
+                                <input ng-model="electricAcoustic" value="acoustic" type="radio" name="guitarType">
+                            </label>
+                        </div>
                     </div>
-                    <div class="intakeVintageWrapper">
-                        <h5>Is it vintage?(30 years or older)</h5>
-                        <label class="intakeVintageYesButton">
+                </div>
+                <div class="guitarIntakeFormRowThree">
+
+                    <div class="guitarFinishWrapper">
+                        <p class="guitarFinishTitle">Color and/or Finish</p>
+                        <p class="guitarFinishSubTitle">(leave blank if unkown)</p>
+                        <input class="guitarFinishInput" type="text" ng-model="finishInput">
+                    </div>
+                    <div class="guitarCountryWrapper">
+                        <p class="guitarCountryTitle">Country of Origin</p>
+                        <p class="guitarCountrySubTitle">(leave blank if unknown)</p>
+                        <input class="guitarCountryInput" type="text" ng-model="guitarCountryInput">
+                    </div>
+                    <div class="vintageWrapper">
+                        <p class="vintageTitle">Is it vintage?</p>
+                        <p class="vintageSubTitle">(30+ years old)*required</p>
+                        <div class="vintageInput">
+                            <label class="vintageYesButton">
                                 Yes
+                                <span ng-show="vintageCheck === 'yes'">
+                                    <i class="far fa-circle fa-sm honk"></i>
+                                </span>
+                                <span ng-show="vintageCheck !== 'yes'">
+                                    <i class="far fa-circle fa-sm"></i>
+                                </span>
                                 <input ng-model="vintageCheck" value="yes" type="radio" name="vintageSelect">
                             </label>
-                            <label class="intakeVintageNoButton">
+                            <label class="vintageNoButton">
                                 No
+                                <span ng-show="vintageCheck === 'no'">
+                                    <i class="far fa-circle fa-sm honk"></i>
+                                </span>
+                                <span ng-show="vintageCheck !== 'no'">
+                                    <i class="far fa-circle fa-sm"></i>
+                                </span>
                                 <input ng-model="vintageCheck" value="no" type="radio" name="vintageSelect">
-                            <label>
+                            </label>
+                        </div>
                     </div>
                 </div>
             </div>
-            <button ng-click="storeGuitarInfo(guitarBrandInput, guitarModelInput, electricAcoustic, vintageCheck, selectedCondition, finishInput, yearInput, guitarBass, guitarCountryInput)">Submit</button>
+            <div class="intakeButtonWrapper">
+                <button class="submitNewGuitarButton" ng-click="storeGuitarInfo(intakeBrandInput, intakeModelInput, electricAcoustic, vintageCheck, selectedCondition, finishInput, intakeYearInput, guitarBass, guitarCountryInput)">Submit</button>
+            </div>
         </div>
     </div>
 </div>
